Melhorar script de migrations para rodar todas automaticamente
- Migrate.js agora executa todas as migrations em ordem
- package.json: start agora roda migrations antes de iniciar servidor
- Isso garante que o banco será inicializado no Render

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API para Cia de Condimentos (Autenticação)",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npm run migrate && node index.js",
     "dev": "nodemon index.js",
     "migrate": "node migrate.js"
   },
