Fix client-side error handling in admin.html and update .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/cia_condimentos
+DATABASE_URL=postgresql://ciacondimentos_db_user:y4vdBKZwZ3tB4ITKhoBssjSBlgaH2ceh@dpg-d6adstjh46gs73c0qifg-a/ciacondimentos_db
 JWT_SECRET=cia_secret_key_2024
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
